remove terraform files & move cdk resource to root dir

--- a/.gitignore
+++ b/.gitignore
@@ -21,3 +21,11 @@ override.tf.json
 *_override.tf
 *_override.tf.json
 .idea
+*.js
+!jest.config.js
+*.d.ts
+node_modules
+
+# CDK asset staging directory
+.cdk.staging
+cdk.out
